--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 		<script language="JavaScript" src="script.js"></script>
-		<title>Knutshome.de - Passwortverwaltung</title>
+		<title>KPWDManagement</title>
 	</head>
 	<body onload="Init();">
 		<div id="main">
 			<div id="title">
-				<span id="rt">Knutshome.de - Passwortverwaltung</span>
+				<span id="rt">KPWDManagement</span>
 			</div>
 			<div id="list">
 				<div id="toolbar">
