Removed deprecated XMLHTTP object and included prototype api

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+		<script language="JavaScript" src="prototype.js"></script>
+		<script language="JavaScript" src="wp_Cookie.js"></script>
 		<script language="JavaScript" src="script.js"></script>
 		<title>KPWDManagement</title>
 	</head>
