--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 		<script language="JavaScript" src="prototype.js"></script>
 		<script language="JavaScript" src="wp_Cookie.js"></script>
 		<script language="JavaScript" src="script.js"></script>
